commander to marshal

--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
@@ -46,7 +46,7 @@
     <entry name="AstraMilitarum/ValhallanBarrierSquad" value="Valhallan Barrier Squad"/>
     <entry name="AstraMilitarum/ValhallanBarrierSquadDescription" value="Support infantry unit that buffs allied infantry within 3 tiles. Their combat effectiveness is low."/>
     <entry name="AstraMilitarum/ValhallanBarrierSquadFlavor" value=""/>
-    <entry name="AstraMilitarum/ValhallanCommander" value="Valhallan Commander"/>
+    <entry name="AstraMilitarum/ValhallanCommander" value="Valhallan Marshal"/>
     <entry name="AstraMilitarum/ValhallanCommanderDescription" value=""/>
     <entry name="AstraMilitarum/ValhallanCommanderFlavor" value=""/>
     <entry name="AstraMilitarum/ValhallanNightWitches" value="Night Witches"/>
