--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Weapons.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Weapons.xml
@@ -2,16 +2,16 @@
 <language>
     <!-- PTRS-41 -->
     <entry name="ValhallanAntiTankRifle" value="Simonov Mk. 41 Anti-Tank Rifle"/>
-    <entry name="ValhallanAntiTankRifleDescription" value=""/>
-    <entry name="ValhallanAntiTankRifleFlavor" value=""/>
+    <entry name="ValhallanAntiTankRifleDescription" value="Semi-automatic anti-tank rifle."/>
+    <entry name="ValhallanAntiTankRifleFlavor" value="When the Ork waves first hit Valhalla, planetary defences had a wealth of men and materiel to throw against the enemy. As time dragged on, high-quality equipment was destroyed beyond repair or even captured by the brutish foe. Orders were given to acquire a new anti-armour weapons system to pierce through the crude yet effective enemy armoured forces. The Adeptus Mechanicus contingent searched far and wide, but it was two renowned enginseers, Simonov and Degtyaryov, who uncovered an elegant solution. The designs were of ballistic rifles, upsized for larger rounds, where one design yielded a less robust weapon that was cheaper to build. High command was pleased by this discovery, and these weapons were nicknamed after the two enginseers."/>
     <!-- PTRD-41 -->
     <entry name="ValhallanDisposableAntiTankRifle" value="Degtyaryov Mk. 41 Expendable Anti-Tank Rifle"/>
-    <entry name="ValhallanDisposableAntiTankRifleDescription" value=""/>
-    <entry name="ValhallanDisposableAntiTankRifleFlavor" value=""/>
+    <entry name="ValhallanDisposableAntiTankRifleDescription" value="Anti-tank rifle loaded with a single round."/>
+    <entry name="ValhallanDisposableAntiTankRifleFlavor" value="<string name='Weapons/ValhallanAntiTankRifleFlavor'/>"/>
     <!-- DShK M1938 -->
     <entry name="ValhallanHeavyStubber" value="DShK Mk. 38 Heavy Stubber"/>
-    <entry name="ValhallanHeavyStubberDescription" value=""/>
-    <entry name="ValhallanHeavyStubberFlavor" value=""/>
+    <entry name="ValhallanHeavyStubberDescription" value="Heavy machine gun loaded with boltshells and mounted on a tripod"/>
+    <entry name="ValhallanHeavyStubberFlavor" value="Valhallans utilize versatile heavy machines across the infantry and armoured units, based on an ancient design that was restored by enginseer Degtyaryov. The DShK can be mounted on tripods for infantry use or mounted directly on vehicles. It comes with large sights resembling spider webs to aim at airborne targets, and troops have been known to bring down Deffkoptas with sheer volume of fire."/>
     <entry name="ValhallanHeavyStubberAir" value="DShK Mk. 38 Heavy Stubber (Anti-Air Deployment)"/>
     <entry name="ValhallanHeavyStubberAirDescription" value="Decreased range but increased effectiveness against Flyers. <string name='ValhallanHeavyStubberDescription'/>"/>
     <entry name="ValhallanHeavyStubberAirFlavor" value="<string name='ValhallanHeavyStubberFlavor'/>"/>
@@ -20,14 +20,14 @@
     <entry name="AntiTankDogsMelta" value="Dog <string name='Weapons/MeltaBomb'/>"/>
     <!-- Mortars -->
     <entry name="ValhallanKrakMortar" value="120-PM-38 Mortar (Krak)"/>
-    <entry name="ValhallanKrakMortarFlavor" value=""/>
+    <entry name="ValhallanKrakMortarFlavor" value="Valhallan assaults are comprised of two things: masses of infantry and mortar bombardments. The ability to quickly set up and lob explosives at the enemy is vital for softening defences without being vulnerable to accurate counter-batteries."/>
     <entry name="ValhallanFragMortar" value="120-PM-38 Mortar (Frag)"/>
     <entry name="ValhallanFragMortarFlavor" value="<string name='Weapons/ValhallanKrakMortarFlavor'/>"/>
     <!-- Sniper Rifle -->
     <entry name="ValhallanSniperRifle" value="Mosina Mk. 1891 Longlas"/>
     <entry name="ValhallanSniperRifleDescription" value="Sniper Lasgun that deals damage to its user when in hot environments."/>
-    <entry name="ValhallanSniperRifleFlavor" value=""/>
+    <entry name="ValhallanSniperRifleFlavor" value="The frigid winds of Valhalla rapidly cools down hot weaponry, leading to Valhallan Sharpshooters being armed with overcharged Longlasguns. When facing a horde of Orks, the extra power can be just what's needed to secure the kill."/>
     <!-- Bayonet -->
     <entry name="ValhallanBayonet" value="M40 Bayonet"/>
-    <entry name="ValhallanBayonetFlavor" value=""/>
+    <entry name="ValhallanBayonetFlavor" value="The bayonet symbolises the heart of the Imperial Guard. No matter how powerful the enemy is, the spirit of Man will face it with bayonets affixed. While a single stab has little effect, every attack weakens the foe, until one finally finds its mark."/>
 </language>
