--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
@@ -18,7 +18,7 @@
     <entry name="AstraMilitarum/GulagDescription" value="Target an infantry unit with less than 10% health, surrounded by 3 Valhallans. Remove this unit and gain Ore and Influence."/>
     <entry name="AstraMilitarum/GulagFlavor" value=""/>
     <entry name="AstraMilitarum/DeployValhallanBarrierSquad" value="Deploy <string name='Units/AstraMilitarum/ValhallanBarrierSquad'/>"/>
-    <entry name="AstraMilitarum/DeployValhallanBarrierSquadDescription" value="Spawns a permanent, mortal unit. <string name='Units/AstraMilitarum/ValhallanBarrierSquadDescription'/>"/>
+    <entry name="AstraMilitarum/DeployValhallanBarrierSquadDescription" value="Spawns a permanent, mortal unit that supports nearby allies but cannot move. <string name='Units/AstraMilitarum/ValhallanBarrierSquadDescription'/>"/>
     <entry name="AstraMilitarum/DeployValhallanBarrierSquadFlavor" value=""/>
     <entry name="AstraMilitarum/NotOneStepBack" value="Not one step back!"/>
     <!-- Barrier Squad Aura -->
@@ -27,28 +27,28 @@
     <entry name="AstraMilitarum/BarrierSquadAuraFlavor" value=""/>
     <!-- Commander -->
     <entry name="AstraMilitarum/HoldTheLine" value="Hold the Line"/>
-    <entry name="AstraMilitarum/HoldTheLineDescription" value=""/>
+    <entry name="AstraMilitarum/HoldTheLineDescription" value="Grants bonuses to allied infantry. Radius is increased upon levelling up this ability. <string name='Traits/HoldTheLineDescription'/>"/>
     <entry name="AstraMilitarum/HoldTheLineFlavor" value=""/>
     <entry name="AstraMilitarum/ThePeoplesCommissar" value="The People's Commissar"/>
-    <entry name="AstraMilitarum/ThePeoplesCommissarDescription" value=""/>
+    <entry name="AstraMilitarum/ThePeoplesCommissarDescription" value="Grants buffs and instant healing to allied infantry. Duration is increased upon levelling up this ability. <string name='Traits/ThePeoplesCommissarDescription'/>"/>
     <entry name="AstraMilitarum/ThePeoplesCommissarFlavor" value=""/>
     <entry name="AstraMilitarum/DefendThisStrongpoint" value="Defend this Strongpoint"/>
-    <entry name="AstraMilitarum/DefendThisStrongpointDescription" value=""/>
+    <entry name="AstraMilitarum/DefendThisStrongpointDescription" value="Target an allied Fortification that is not a Headquarters. The tiles around it grant increased defence. <string name='Traits/AstraMilitarum/StrongpointReinforcedDescription'/>"/>
     <entry name="AstraMilitarum/DefendThisStrongpointFlavor" value=""/>
     <entry name="AstraMilitarum/TheMotherlandCalls" value="The Motherland Calls"/>
-    <entry name="AstraMilitarum/TheMotherlandCallsDescription" value=""/>
+    <entry name="AstraMilitarum/TheMotherlandCallsDescription" value="Grants bonuses to allied infantry that are within 5 tiles of an allied city. <string name='Traits/TheMotherlandCallsDescription'/>"/>
     <entry name="AstraMilitarum/TheMotherlandCallsFlavor" value=""/>
     <!-- Night Witches -->
     <entry name="AstraMilitarum/NightBomber" value="Night Bomber"/>
-    <entry name="AstraMilitarum/NightBomberDescription" value=""/>
+    <entry name="AstraMilitarum/NightBomberDescription" value="<string name='Traits/AstraMilitarum/NightBomberDescription'/>"/>
     <entry name="AstraMilitarum/NightBomberFlavor" value=""/>
     <entry name="AstraMilitarum/FlyLow" value="Idle Engines"/>
-    <entry name="AstraMilitarum/FlyLowDescription" value=""/>
+    <entry name="AstraMilitarum/FlyLowDescription" value="<string name='Traits/AstraMilitarum/FlyLowDescription'/> <string name='Traits/AstraMilitarum/FlyLowSlowdownDescription'/>"/>
     <entry name="AstraMilitarum/FlyLowFlavor" value=""/>
     <entry name="AstraMilitarum/HarassEnemies" value="Harassment Sortie"/>
-    <entry name="AstraMilitarum/HarassEnemiesDescription" value=""/>
+    <entry name="AstraMilitarum/HarassEnemiesDescription" value="Target an enemy unit. Infantry within 1 tile of that unit have reduced combat effectiveness."/>
     <entry name="AstraMilitarum/HarassEnemiesFlavor" value=""/>
     <entry name="AstraMilitarum/LoadExtraAmmo" value="Load Additional Ammo"/>
-    <entry name="AstraMilitarum/LoadExtraAmmoDescription" value=""/>
+    <entry name="AstraMilitarum/LoadExtraAmmoDescription" value="<string name='Traits/AstraMilitarum/LoadExtraAmmoDescription'/>"/>
     <entry name="AstraMilitarum/LoadExtraAmmoFlavor" value=""/>
 </language>
